// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapValuesDeep > array recursion > mapValuesDeep([ 'short', 'this is long' ], (value) => { if (typeof value === "string" && value.length > 10) { return value....) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS ARRAY
[ 'short', 'this is long' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > array recursion > mapValuesDeep([ [Error: e1], [Error: e2] ], (value) => { if (value instanceof Error) return value.message; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS ARRAY
[ 'e1', 'e2' ]
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > array recursion > mapValuesDeep([ 1, 2, 3 ], (value) => { if (typeof value === "number") return value * 2; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS ARRAY
[ 1, 2, 3 ]
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit on match > mapValuesDeep('short', (value) => { if (typeof value === "string" && value.length > 10) { return value....) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
short
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit on match > mapValuesDeep('this is a very long string', (value) => { if (typeof value === "string" && value.length > 10) { return value....) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
this is a very long string
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit on match > mapValuesDeep([Error: test error], (value) => { if (value instanceof Error) return value.message; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
test error
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit on match > mapValuesDeep({ num: 10, nested: { num: 20 } }, (value) => { if (typeof value === "number") return value * 2; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  num: 10,
  nested: {
    num: 20
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit on match > mapValuesDeep(5, (value) => { if (typeof value === "number") return value * 2; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NUMBER
5
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > early exit stops recursion > mapValuesDeep({ replace: true, nested: { untouched: 'data' } }, (value) => { if (typeof value === "object" && value !== null && "replace" in val...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
REPLACED
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > mixed structures > mapValuesDeep({ nums: [ 1, 2 ], nested: { nums: [ 3, 4 ] } }, (value) => { if (typeof value === "number") return value * 2; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  nums: [ 1, 2 ],
  nested: {
    nums: [ 3, 4 ]
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > object recursion > mapValuesDeep({ a: 5, b: { c: 10 } }, (value) => { if (typeof value === "number") return value * 2; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  a: 5,
  b: {
    c: 10
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > object recursion > mapValuesDeep({ err: [Error: test] }, (value) => { if (value instanceof Error) return value.message; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  err: 'test'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > object recursion > mapValuesDeep({ str: 'short and long string' }, (value) => { if (typeof value === "string" && value.length > 10) { return value....) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  str: 'short and long string'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep('hello', () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep('hello', () => void 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(42, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NUMBER
42
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(42, () => void 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NUMBER
42
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(null, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(null, () => void 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(true, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(true, () => void 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(undefined, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS UNDEFINED
undefined
╚══════════════════════════════════════════════════╝"
`;

exports[`mapValuesDeep > primitives pass through > mapValuesDeep(undefined, () => void 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS UNDEFINED
undefined
╚══════════════════════════════════════════════════╝"
`;
